tests/baselines/reference/parserComputedPropertyName39.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName39.ts(3,6): error TS1212: Identifier expected. 'public' is a reserved word in strict mode
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName39.ts(3,6): error TS2304: Cannot find name 'public'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName39.ts (2 errors) ====
    "use strict";
    class C {
        [public]() { }
         ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode
         ~~~~~~
!!! error TS2304: Cannot find name 'public'.
    }